<resources>
    <string name="app_name">Medical Mentoring</string>

    <string name="action_settings">Settings</string>

    <string name="txtEmail">E-mail</string>
    <string name="txtAnno">registration year</string>
    <string name="txtNumero">Registration number</string>
    <string name="txtProv">province</string>
    <string name="txtDatiAlbo">Data Medical Register</string>
    <string name="btnRegistrazione">Sign in</string>

    <string-array name="arrayProvince">
        <item>Agrigento (AG)</item>
        <item>Alessandria (AL)</item>
        <item>Ancona (AN)</item>
        <item>Aosta (AO)</item>
        <item>Aquila (AQ)</item>
        <item>Arezzo (AR)</item>
        <item>Ascoli-Piceno (AP)</item>
        <item>Asti (AT)</item>
        <item>Avellino (AV)</item>
        <item>Bari (BA)</item>
        <item>Barletta-Andria-Trani (BT)</item>
        <item>Belluno (BL)</item>
        <item>Benevento (BN)</item>
        <item>Bergamo (BG)</item>
        <item>Biella (BI)</item>
        <item>Bologna (BO)</item>
        <item>Bolzano (BZ)</item>
        <item> Brescia (BS)</item>
        <item>Brindisi (BR)</item>
        <item>Cagliari (CA)</item>
        <item>Caltanissetta (CL)</item>
        <item>Campobasso (CB)</item>
        <item>Carbonia Iglesias (CI)</item>
        <item>Caserta (CE)</item>
        <item>Catania (CT)</item>
        <item>Catanzaro (CZ)</item>
        <item>Chieti (CH)</item>
        <item>Como (CO)</item>
        <item>Cosenza (CS)</item>
        <item>Cremona (CR)</item>
        <item>Crotone (KR)</item>
        <item>Cuneo (CN)</item>
        <item>Enna (EN)</item>
        <item>Fermo (FM)</item>
        <item>Ferrara (FE)</item>
        <item>Firenze (FI)</item>
        <item>Foggia (FG)</item>
        <item>Forli-Cesena (FC)</item>
        <item>Frosinone (FR)</item>
        <item>Genova (GE)</item>
        <item>Gorizia (GO)</item>
        <item>Grosseto (GR)</item>
        <item>Imperia (IM)</item>
        <item>Isernia (IS)</item>
        <item>La-Spezia (SP)</item>
        <item>Latina (LT)</item>
        <item>Lecce (LE)</item>
        <item>Lecco (LC)</item>
        <item>Livorno (LI)</item>
        <item>Lodi (LO)</item>
        <item>Lucca (LU)</item>
        <item>Macerata (MC)</item>
        <item>Mantova (MN)</item>
        <item>Massa-Carrara (MS)</item>
        <item>Matera (MT)</item>
        <item>Medio Campidano (VS)</item>
        <item>Messina (ME)</item>
        <item>Milano (MI)</item>
        <item>Modena (MO)</item>
        <item>Monza-Brianza (MB)</item>
        <item>Napoli (NA)</item>
        <item>Novara (NO)</item>
        <item>Nuoro (NU)</item>
        <item>Ogliastra (OG)</item>
        <item>Olbia Tempio (OT)</item>
        <item>Oristano (OR)</item>
        <item>Padova (PD)</item>
        <item>Palermo (PA)</item>
        <item>Parma (PR)</item>
        <item>Pavia (PV)</item>
        <item>Perugia (PG)</item>
        <item>Pesaro-Urbino (PU)</item>
        <item>Pescara (PE)</item>
        <item>Piacenza (PC)</item>
        <item>Pisa (PI)</item>
        <item>Pistoia (PT)</item>
        <item>Pordenone (PN)</item>
        <item>Potenza (PZ)</item>
        <item>Prato (PO)</item>
        <item>Ragusa (RG)</item>
        <item>Ravenna (RA)</item>
        <item>Reggio-Calabria (RC)</item>
        <item>Reggio-Emilia (RE)</item>
        <item>Rieti (RI)</item>
        <item>Rimini (RN)</item>
        <item>Roma (Roma)</item>
        <item>Rovigo (RO)</item>
        <item>Salerno (SA)</item>
        <item>Sassari (SS)</item>
        <item>Savona (SV)</item>
        <item>Siena (SI)</item>
        <item>Siracusa (SR)</item>
        <item>Sondrio (SO)</item>
        <item>Taranto (TA)</item>
        <item>Teramo (TE)</item>
        <item>Terni (TR)</item>
        <item>Torino (TO)</item>
        <item>Trapani (TP)</item>
        <item>Trento (TN)</item>
        <item>Treviso (TV)</item>
        <item>Trieste (TS)</item>
        <item>Udine (UD)</item>
        <item>Varese (VA)</item>
        <item>Venezia (VE)</item>
        <item>Verbania (VB)</item>
        <item>Vercelli (VC)</item>
        <item>Verona (VR)</item>
        <item>Vibo-Valentia (VV)</item>
        <item>Vicenza (VI)</item>
        <item>Viterbo (VT)</item>
    </string-array>

    <string-array name="specializzazioni">
        <item>Allergologia</item>
        <item>Anatomia patologica</item>
        <item>Andrologia</item>
        <item>Anestesia e rianimazione</item>
        <item>Angiologia</item>
        <item>Cardiochirurgia</item>
        <item>Cardiologia</item>
        <item>Chirurgia vascolare</item>
        <item>Dermatologia</item>
        <item>Dietetica</item>
        <item>Ematologia</item>
        <item>Embriologia</item>
        <item>Endrocrinologia</item>
        <item>Epatologia</item>
        <item>Epidemiologia</item>
        <item>Gastroenterologia</item>
        <item>Genetica</item>
        <item>Geriatria</item>
        <item>Ginecologia e ostetricia</item>
        <item>Igiene e medicina preventiva</item>
        <item>Immunologia</item>
        <item>Infettivologia</item>
        <item>Istologia</item>
        <item>Logopedia</item>
        <item>Medicina aeronautica</item>
        <item>Medicina del lavoro</item>
        <item>Medicina generale</item>
        <item>Medicina sportiva</item>
        <item>Nefrologia</item>
        <item>Neonatologia</item>
        <item>Neurologia</item>
        <item>Neuroscienze</item>
        <item>Odontoiatria</item>
        <item>Oftalmologia</item>
        <item>Oncologia</item>
        <item>Ortopedia</item>
        <item>Otorinolaringoiatria</item>
        <item>Pediatria</item>
        <item>Pneumologia</item>
        <item>Psichiatria</item>
        <item>Radiologia</item>
        <item>Radioterapia</item>
        <item>Reumatologia</item>
        <item>Sessuologia</item>
        <item>Traumatologia</item>
        <item>Medicina d\'urgenza</item>
        <item>Urologia</item>
        <item>Nanomedicina</item>
        <item>Psicodermatologia</item>
        <item>Chirurgia toracica</item>
        <item>Neuroncologia</item>
        <item>Flebologia</item>
        <item>Senologia</item>
        <item>Neurochirurgia</item>
        <item>Chirurgia generale</item>

    </string-array>

    <string-array name="arrayDrawerMenu">

        <item>Profile</item>
        <item>My request</item>
        <item>My availability</item>

    </string-array>

    <string name="serverQuery">http://www.di.uniba.it/~buono/SSS/casidistudio/consulenze/script_php/accessoFile.php</string>
    <string name="title_activity_profilo">Profile</string>
    <string name="txtBtnAppuntamenti">Appointments</string>
    <string name="txtBtnDisponibilità">Availability</string>
    <string name="txtBtnGestioneProfilo">Account</string>
    <string name="title_activity_appuntamenti">Appointments</string>
    <string name="title_activity_disponibilita">Availability</string>
    <string name="title_activity_gestione_account">Account</string>
    <string name="txtBtnAccesso">Login</string>
    <string name="txtViewPassword">Password</string>
    <string name="txtViewUsername">Username</string>
    <string name="txtViewRegistrati">Sign in</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="accedi">Enter</string>
    <string name="registrati">Sign in</string>
    <string name="title_activity_registrati">Sign in</string>
    
    <string name="hello_world">Hello world!</string>
    <string name="anno_iscrizione">registration year</string>
    <string name="numero_iscrizione">registration number</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_calendar">Calendar</string>

    <string name="drawer_close">Menu</string>
    <string name="drawer_open">Home</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cognome">Surname</string>
    <string name="nome">Name</string>
    <string name="informazioni_personali">Personal Data</string>
    <string name="informazioni_dottori">Data Medical Register</string>
    <string name="specializzazione">Specialization</string>
    <string name="cambia_psw">Change Password</string>
    <string name="modifica">Edit</string>

    <string name="sei_sicuro">Are you sure ?</string>
    <string name="si">yes</string>
    <string name="no">no</string>
    <string name="vecchia_password">Old Password</string>
    <string name="nuova_password">New Password</string>
    <string name="annulla">Cancel</string>
    <string name="ok">Ok</string>
    <string name="title_activity_inserisci_richiesta">Insert request</string>
    <string name="inserisci_dati">Insert personal data</string>
    <string name="seleziona_data">Choose a date</string>
    <string name="da">from</string>
    <string name="a">to</string>
    <string name="orario">Time</string>
    <string name="cerca">Search</string>
    <string name="title_activity_richiesta">Request</string>
    <string name="title_activity_inserisci_disponibilita">Insert Availability</string>
    <string name="una_volta">One time</string>
    <string name="ogni_settimana">Weekly</string>
    <string name="bisettimanale">Biweekly</string>
    <string name="fino_a_data">To date</string>
    <string name="disponibilita_inserita">Inserted Availability</string>
    <string name="inserisci">Insert</string>
    <string name="invia_richiesta">Send request</string>
    <string name="Accetta">Accept</string>
    <string name="richiesta_in_sospeso">Pending request</string>
    <string name="title_activity_le_mie_richieste">My Request</string>
    <string name="title_activity_le_mie_disponibilita">My Availability</string>
    <string name="rifiuta">Decline</string>
    <string name="logout">Logout</string>




    <string name="appuntamenti">APPOINTMENTS</string>
    <string name="notifiche">NOTICATIONS</string>
    <string name="ricevimento_tutoraggio">Receiving tutoring</string>
    <string name="conferma">Confirm</string>
    <string name="sei_sicuro_inserire_disp">Are you sure to insert your availability</string>

    <string name="ops_orario">Ops, invalid time</string>
    <string name="ops_data">Ops, invalid date</string>
    <string name="ops_connection">Connection failed</string>

    <string name="ops_login">Wrong username or password</string>
    <string name="ciao">Hello</string>
    <string name="oldp">Caution, wrong old password</string>
    <string name="newp">or new password</string>
    <string name="cambiap">Change password</string>
    <string name="ins_successo">Insertion successful</string>
    <string name="tutti_campi">Fill all fields</string>

    <string name="benvenuto">Welcome</string>
    <string name="inv_ric_server">Send the request to the server for automatic search?</string>
    <string name="ric_inviata">Request sent</string>
    <string name="nessun_risultato_trovato">No request found</string>
    <string name="remove">Remove</string>

</resources>
