<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/oldPassET"
        android:layout_gravity="center_horizontal"
        android:hint="@string/vecchia_password"
        android:layout_margin="5dp"
        android:padding="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/newPassET"
        android:hint="@string/nuova_password"
        android:layout_margin="5dp"
        android:padding="10dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="right">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/annulla"
            android:id="@+id/annullaBTN"
            android:textColor="@color/material_deep_teal_500"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:padding="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:id="@+id/okBTN"
            android:textColor="@color/material_deep_teal_500"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:padding="10dp"/>
    </LinearLayout>
</LinearLayout>