<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                tools:context="it.uniba.di.sss1415.medicalmentoring.Profilo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cambia_psw"
                android:id="@+id/cambiapswBTN"
                android:layout_alignTop="@+id/scrollView3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/scrollView3"
                android:layout_alignEnd="@+id/scrollView3"
                android:onClick="cambiaPassword"/>

            <TextView
                android:id="@+id/datiTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/informazioni_personali"
                android:padding="15dp"
                android:textColor="#000000"
                android:layout_marginTop="15dp"
                android:textSize="17dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/nomeET"
                android:layout_below="@+id/cambiapswBTN"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/scrollView3"
                android:layout_alignEnd="@+id/scrollView3"
                android:hint="@string/nome"
                android:background="#ffffff"
                android:padding="10dp"
                android:layout_marginTop="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/cognomeET"
                android:layout_below="@+id/nomeET"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/scrollView3"
                android:layout_alignEnd="@+id/scrollView3"
                android:hint="@string/cognome"
                android:background="#ffffff"
                android:padding="10dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/iscrizioneTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/informazioni_dottori"
                android:padding="15dp"
                android:textColor="#000000"
                android:layout_marginTop="15dp"
                android:textSize="17dp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/provSP"
                android:layout_below="@+id/cognomeET"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="#ffffff"
                android:padding="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/annoET"
                android:layout_below="@+id/provSP"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/scrollView3"
                android:layout_alignEnd="@+id/scrollView3"
                android:hint="@string/anno_iscrizione"
                android:background="#ffffff"
                android:padding="10dp"
                android:layout_marginTop="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/numeroET"
                android:layout_below="@+id/annoET"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/scrollView3"
                android:layout_alignEnd="@+id/scrollView3"
                android:hint="@string/numero_iscrizione"
                android:background="#ffffff"
                android:padding="10dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/specializzazioneTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/specializzazione"
                android:padding="15dp"
                android:textColor="#000000"
                android:layout_marginTop="15dp"
                android:textSize="17dp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/specSP"
                android:layout_below="@+id/numeroET"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="#ffffff"
                android:padding="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modifica"
                android:id="@+id/confermaBTN"
                android:layout_alignTop="@+id/scrollView3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/scrollView3"
                android:layout_alignEnd="@+id/scrollView3"
                android:layout_marginTop="25dp"
                android:onClick="modificaAccount"/>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
