<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Login"
    android:background="#00BFA5">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emailET"
                android:layout_centerVertical="true"
                android:hint="@string/email"
                android:padding="15dp"
                android:layout_below="@+id/logoIV"
                android:layout_alignRight="@+id/passwordET"
                android:layout_alignEnd="@+id/passwordET"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:text="chris.piemo@afa.com"
                android:inputType="textEmailAddress"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passwordET"
        android:layout_below="@+id/emailET"
        android:hint="@string/password"
        android:padding="15dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:text="piemo"
        android:inputType="textPassword"/>

            <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accedi"
        android:id="@+id/loginBTN"
        android:layout_below="@+id/passwordET"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/passwordET"
        android:layout_alignEnd="@+id/passwordET"
        android:onClick="accessoSistema"
        android:padding="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrati"
        android:id="@+id/signinBTN"
        android:layout_below="@+id/loginBTN"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="mostraReg"
        android:padding="20dp"/>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/logoIV"
                android:src="@drawable/logo"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
