<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="it.uniba.di.sss1415.medicalmentoring.Registrati"
    android:background="#00BFA5">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/registrati"
        android:id="@+id/registratiTV"
        android:layout_alignParentTop="true"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:textSize="30dp"
        android:padding="10dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailR_TV"
        android:layout_below="@+id/registratiTV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/email"
        android:padding="15dp"
        android:background="#ffffffff"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordR_TV"
        android:layout_below="@+id/emailR_TV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/password"
        android:padding="15dp"
        android:background="#ffffffff"
        android:layout_marginTop="5dp"
        android:layout_alignParentRight="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/annoR_TV"
        android:layout_below="@+id/passwordR_TV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/anno_iscrizione"
        android:layout_alignRight="@+id/passwordR_TV"
        android:layout_alignEnd="@+id/passwordR_TV"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:background="#ffffffff"
        android:layout_alignParentRight="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numeroR_TV"
        android:layout_below="@+id/annoR_TV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/annoR_TV"
        android:layout_alignEnd="@+id/annoR_TV"
        android:hint="@string/numero_iscrizione"
        android:padding="15dp"
        android:background="#ffffffff"
        android:layout_marginTop="5dp"
        android:layout_alignParentRight="true"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/provinceR_SP"
            android:background="#ffffff"
            android:layout_below="@+id/numeroR_TV"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:padding="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrati"
            android:id="@+id/button"
            android:padding="20dp"
            android:layout_below="@+id/provinceR_SP"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:onClick="registrazioneUtente"/>
    </RelativeLayout>
</ScrollView>



</RelativeLayout>
