<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="it.uniba.di.sss1415.medicalmentoring.InserisciRichiesta" >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/specializzazione"
                android:id="@+id/specializzazioneTV"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:clickable="false"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/specSP"
                android:padding="10dp"
                android:layout_below="@+id/specializzazioneTV"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="#ffffff"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/seleziona_data"
                android:id="@+id/dataTV"
                android:layout_below="@+id/specSP"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="10dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dateBTN"
                android:onClick="showDatePicker"
                android:focusable="false"
                style="@style/Base.Widget.AppCompat.AutoCompleteTextView"
                android:padding="10dp"
                android:layout_below="@+id/dataTV"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/orario"
                android:id="@+id/orarioTV"
                android:layout_below="@+id/dateBTN"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:autoText="false"/>

            <LinearLayout
                android:id="@+id/daLL"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/orarioTV"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/daTV"
                    android:text="@string/da"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/aTV"
                    android:text="@string/a"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/aLL"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/daLL"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/inizioBTN"
                    android:onClick="showDaTimePicker"
                    android:focusable="false"
                    style="@style/Base.Widget.AppCompat.AutoCompleteTextView"
                    android:padding="10dp"
                    android:layout_below="@+id/dateBTN"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:layout_marginRight="5dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fineBTN"
                    android:onClick="showATimePicker"
                    android:focusable="false"
                    style="@style/Base.Widget.AppCompat.AutoCompleteTextView"
                    android:padding="10dp"
                    android:layout_alignTop="@+id/inizioBTN"
                    android:layout_toRightOf="@+id/inserisciTV"
                    android:layout_toEndOf="@+id/inserisciTV"
                    android:layout_weight="1"
                    android:background="#ffffff"
                    android:layout_marginLeft="5dp"/>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cerca"
                android:id="@+id/cercaBTN"
                android:layout_below="@+id/aLL"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:padding="20dp"
                android:layout_marginTop="30dp"
                android:onClick="mostraCerca"
                android:layout_alignWithParentIfMissing="false"
                android:layout_alignParentTop="false" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>